# mcp

./: .gitignore  README.md  pyproject.toml  tsconfig.json
client/: .eslintrc.json  mcp-server.json  package-lock.json  package.json
client/src/: index.ts
client/src/types/: index.ts
server/: package-lock.json  package.json
server/src/: main.ts  weather.ts
