[project]
name = "mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "yen0304",email = "asce55123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.12"
dependencies = [
    "open-webui (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
